package org.example.Enums;

public enum AccountType {
    STUDENT, PROFESSOR, CASUAL_READER, TEACHER
}
