package org.example.Enums;

public enum BookStatus {
    AVAILABLE, RESERVED, LOANED, LOST , UNAVAILABLE
}
