package org.example.Enums;

public enum MemberStatus {
    ACTIVE, CLOSED, CANCELED, BLACKLISTED
}
