package org.example.Enums;

public enum Status {
    NEVER, ON_TIME, LATE , ISSUED
}
