package org.example.search_system;

import org.example.book.BookBorrowDetails;

public class SearchSystem {

    public void searchByAuthor(String author){
        //get bookBorrowDetails from list of books from library by author
        //and tell if book is available or not
    }

    public void searchByTitle(String title){
        //get bookBorrowDetails from list of books from library by title
        //and tell if book is available or not
    }

    public void searchByISBN(String ISBN){
        //get bookBorrowDetails from list of books from library by ISBN
        //and tell if book is available or not
    }
}
